# x-cli-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README-zh.md  README.md  install.ps1  install.sh  xcli.manifest.toml
.github/workflows/: ci.yml  release.yml
crates/xcli/: Cargo.toml
crates/xcli-baidu/src/: lib.rs
crates/xcli-browser/: Cargo.toml
crates/xcli-browser/src/: lib.rs
crates/xcli-chatgpt-image/: Cargo.toml
crates/xcli-chatgpt-image/src/: lib.rs
crates/xcli-core/: Cargo.toml
crates/xcli-core/src/: lib.rs
crates/xcli-google/src/: lib.rs
crates/xcli-nanobanana/: Cargo.toml
crates/xcli-nanobanana/src/: lib.rs
crates/xcli-output/: Cargo.toml
crates/xcli-output/src/: lib.rs
crates/xcli-twitter/: Cargo.toml
crates/xcli-twitter/src/: lib.rs
crates/xcli-webbridge/: Cargo.toml
crates/xcli-webbridge/src/: lib.rs
crates/xcli-xiaohongshu/: Cargo.toml
crates/xcli-xiaohongshu/src/: lib.rs
crates/xcli/src/: main.rs
crates/xcli/src/commands/: baidu.rs  chatgpt_image.rs  google.rs  mod.rs  nanobanana.rs  xiaohongshu.rs
docs/: companion-skill-template.md  google-archaeology.md  new-cli-guide.md  release-checklist.md  site-cli-template.md  twitter.md  xiaohongshu.md
examples/baidu-cli/: Cargo.toml
examples/baidu-cli/src/: main.rs
examples/chatgpt-image-cli/: Cargo.toml
examples/chatgpt-image-cli/src/: main.rs
examples/nanobanana-cli/: Cargo.toml
examples/twitter-cli/: Cargo.toml
examples/twitter-cli/src/: main.rs
examples/xiaohongshu-cli/: Cargo.toml
examples/xiaohongshu-cli/src/: main.rs
skills/xcli-rs-cli-creator/: SKILL.md
skills/xcli-rs-cli-creator/agents/: openai.yaml
skills/xcli-rs-cli-creator/references/: output-contract.md  release-integration.md  rust-layout.md  site-archaeology.md  testing.md
skills/xcli-rs-user/: SKILL.md
skills/xcli-rs-user/agents/: openai.yaml
skills/xcli-rs-user/references/: commands.md  json-contract.md  troubleshooting.md
xtask/: Cargo.toml
xtask/src/: main.rs
