[workspace]
members = [
  "crates/xcli-core",
  "crates/xcli-output",
  "crates/xcli-webbridge",
  "crates/xcli-browser",
  "crates/xcli-chatgpt-image",
  "examples/chatgpt-image-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/hu-qi/x-cli-rs"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
