[package]
name = "xcli-chatgpt-image"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
time.workspace = true
xcli-browser = { path = "../xcli-browser" }
xcli-core = { path = "../xcli-core" }
xcli-webbridge = { path = "../xcli-webbridge" }
