[package]
name = "xcli-xiaohongshu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
urlencoding.workspace = true
xcli-browser = { path = "../xcli-browser" }
xcli-core = { path = "../xcli-core" }
xcli-webbridge = { path = "../xcli-webbridge" }

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
