[package]
name = "chatgpt-image-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
xcli-browser = { path = "../../crates/xcli-browser" }
xcli-chatgpt-image = { path = "../../crates/xcli-chatgpt-image" }
xcli-core = { path = "../../crates/xcli-core" }
xcli-output = { path = "../../crates/xcli-output" }
xcli-webbridge = { path = "../../crates/xcli-webbridge" }
